// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        outline
        warning"
  id="custom-id"
>
  3
</div>
`;

exports[`rendering renders correctly with label 1`] = `
<div
  className="root
        
        note"
>
  label
</div>
`;
